Fix spacing of Header text when meta information is and is not displayed

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -16,11 +16,6 @@
 }
 
 /* Other */
-.meta {
-    /* TODO: Rename .meta to something else */
-    margin-bottom: 20px;
-}
-
 .meta span:not(:last-child):after {
     content: '/'; /* Post breadcrumb separator */
     padding: 0 4px;
