--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -15,7 +15,6 @@ h1, h2, h3, h4, h5, h6 {
     letter-spacing: -0.04em;
     line-height: 1.1;
     margin-top: 0;
-    margin-bottom: 10px;
     font-weight: 300;
     font-size: 42px;
     color: #262626;
